[package]
name = "fc5-tool"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
publish = false

[dependencies]
camino = "1.1.6"
clap = { version = "4.4.4", features = ["derive"] }
color-eyre = "0.6.2"
culpa = "1.0.1"
eyre = "0.6.8"
fastanvil = { version = "0.28.0", default-features = false }
fastnbt = "2.4.4"
flate2 = "1.0.26"
itertools = "0.11.0"
rand = "0.8.5"
serde = { version = "=1.0.171", features = ["derive"] }
serde_with = "3.4.0"
toml = { version = "0.7.6", default-features = false, features = ["parse"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.17"
tracing-tree.branch = "suppress-spans"
tracing-tree.git = "https://github.com/Nemo157/tracing-tree"
uuid = "1.4.1"

# enforce working minimal-versions
is-terminal = { version = "0.4.9", optional = true }
indoc = "2.0.4"
pretty_assertions = "1.4.0"

[lints.rust]
absolute-paths-not-starting-with-crate = "warn"
deprecated-in-future = "warn"
keyword-idents = "warn"
let-underscore-drop = "warn"
macro-use-extern-crate = "warn"
meta-variable-misuse = "warn"
missing-abi = "warn"
missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
pointer-structural-match = "warn"
rust-2018-idioms = "warn"
single-use-lifetimes = "warn"
trivial-casts = "warn"
trivial-numeric-casts = "warn"
unreachable-pub = "warn"
unsafe-code = "deny"
unsafe-op-in-unsafe-fn = "warn"
variant-size-differences = "warn"

[lints.clippy]
as-conversions = "warn"
as-underscore = "warn"
cloned-instead-of-copied = "warn"
enum-glob-use = "warn"
explicit-into-iter-loop = "warn"
explicit-iter-loop = "warn"
filter-map-next = "warn"
flat-map-option = "warn"
if-not-else = "warn"
if-then-some-else-none = "warn"
ignored-unit-patterns = "warn"
implicit-clone = "warn"
inconsistent-struct-constructor = "warn"
index-refutable-slice = "warn"
inefficient-to-string = "warn"
inline-always = "warn"
invalid-upcast-comparisons = "warn"
items-after-statements = "warn"
iter-not-returning-iterator = "warn"
let-underscore-untyped = "warn"
manual-assert = "warn"
manual-instant-elapsed = "warn"
manual-let-else = "warn"
manual-ok-or = "warn"
manual-string-new = "warn"
many-single-char-names = "warn"
module-name-repetitions = "warn"
needless-pass-by-value = "warn"
needless-question-mark = "allow"
needless-raw-strings = "warn"
no-effect-underscore-binding = "warn"
print-stderr = "warn"
redundant-closure-for-method-calls = "warn"
redundant-else = "warn"
redundant-type-annotations = "warn"
ref-option-ref = "warn"
rest-pat-in-fully-bound-structs = "warn"
self-named-module-files = "warn"
semicolon-if-nothing-returned = "warn"
str-to-string = "warn"
string-to-string = "warn"
todo = "warn"
unicode-not-nfc = "warn"
unimplemented = "warn"
uninlined-format-args = "warn"
unneeded-field-pattern = "warn"
unnested-or-patterns = "warn"
unwrap-used = "warn"
verbose-file-reads = "warn"
wildcard-dependencies = "warn"
wildcard-imports = "deny"
zero-sized-map-values = "deny"
